2008-07-16  Dan Nicolaescu  <dann@ics.uci.edu>

	* sysdep.c: Remove code depending on NEED_PTEM_H, unused.  Remove
	if 0-ed code.
	(baud_convert): Don't depend on BAUD_CONVERT, all definitions the
	were the same as the default.
	* s/vms.h (BAUD_CONVERT): Remove, same as the default.
	Remove boilerplate comments.
	* s/hpux10-20.h (BAUD_CONVERT): Remove, same as the default.
	(HAVE_SYSVIPC): Remove, unused.
	(LD_SWITCH_SYSTEM_TEMACS): Simplify, hp9000s700 not supported anymore.

	* m/ia64.h (PNTR_COMPARISON_TYPE): Remove, same as the default.
	Remove boilerplate comments.
	* m/amdx86-64.h (PNTR_COMPARISON_TYPE): Remove, same as the default.
	Remove boilerplate comments.
	* m/ibms390x.h (PNTR_COMPARISON_TYPE): Remove, same as the default.
	Remove boilerplate comments.
	* lisp.h (PNTR_COMPARISON_TYPE): Define it unconditionally.

	* m/ibms390.h:
	* m/intel386.h:
	* m/m68k.h:
	* s/bsd-common.h:
	* s/cygwin.h:
	* s/darwin.h:
	* s/freebsd.h:
	* s/gnu.h:
	* s/msdos.h: Remove boilerplate comments.

	* m/iris4d.h: Remove boilerplate comments and code for systems that
	 do not use this file.
	(IRIS_4D): Remove, unused.

	* m/mips.h: Remove boilerplate comments and code for systems that
	 do not use this file.
	(SIGN_EXTEND_CHAR):
	* m/arm.h (SIGN_EXTEND_CHAR): Remove, unused.
	* unexmips.c: Remove file, unused.

	* editfns.c (Fuser_full_name): Replace the only use of
	USER_FULL_NAME with its value.
	* config.in: Regenerate.

2008-07-16  David Reitter <david.reitter@gmail.com>

	* Makefile.in: add ns-win, ns-carbon-compat, easy-mmode and
	easy-menu to SOME_MACHINE_LISP for the new NeXTstep port

2008-07-16  Glenn Morris  <rgm@gnu.org>

	* emacs.c (system-type): Doc fix.

2008-07-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keyboard.c (parse_menu_item): Don't use cachelist, even under NS.
	If the cache doesn't work, let's fix it, rather than work around it.

2008-07-15  Adrian Robert <Adrian.B.Robert@gmail.com>
